--- a/css/general.css
+++ b/css/general.css
@@ -23,3 +23,12 @@ h2{
   margin: 0 auto;
 }
 
+span.r-mark{
+  margin-right: 10px;
+}
+span.r-mark::before{
+  position: absolute;
+  top: 5px;
+  content: "\00AE";
+  font-size: 20px;
+}
