--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,23 @@ header .em-header-bottom i.fa-bars{
 
 
 /* CAROUSEL SECTION */
+#carousel .em-container-header{
+  height: 200px;
+}
 #carousel img{
-  width: 95%;
+  width: 100%;
   border-radius: 15px;
   cursor: pointer;
 }
-
+#carousel .em-col{
+  padding-bottom: 0;
+  bottom: 0;
+  transition: bottom 1s;
+}
+#carousel .em-col:hover{
+  position: relative;
+  bottom: 10px;
+}
 /* /CAROUSEL SECTION */
 
 /* PLAYHASNOLIMITS */
